test/test_cases/invalid/semanticErr/variables/basicTypeErr13.s
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:9 -- Incompatible type at i (expected: Any[], actual: INT)
